QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Usage of QProcess class has been severely refactored, now using
  QProcess::start() instead of QProcess::startDetached(), giving
  much tighter control over the started jackd(mp) process. Drawbacks
  are that QjackCtl lost its ability and option to leave the process
  detached upon quitting the application. Too bad.

- A new eye-candy bit has sneaked in: server mode display, that is 
  the RT indicator, now blinks when server/client is started/active.

- Combo-box setup history has been corrected on restore, which was
  discarding the very initial default (factory) contents.

- Now that Qt4 is accessible to open-source Windows appplications,
  there's some experimental stuff sneaking in for jackdmp support
  on win32 (http://www.grame.fr/~letz/jackdmp.html). 

- Connections list items were initially sorted in descending order
  by default. Fixed. Client items are now naturally sorted, again.


0.3.0   2007-07-10  Qt4 migration was complete.

- Qt4 migration was complete. Care must be taken with this new
  configuration file and location: this release starts a new one
  from scratch and won't reuse any of the previous existing ones,
  although cut and paste might help if you know what you're doing :)

- On a last-minute addition, the "firewire" audio backend driver
  option has been also included, supporting the ffado.org project
  which is evolving where "freebob" is leaving (thanks to Klaus
  Zimmermann for this one).


0.2.23   2007-07-02  JACK MIDI support debut.

- JACK MIDI support is now being introduced. Connections window
  now has a brand new MIDI tab, the older being renamed to ALSA,
  as for the ALSA/MIDI sequencer conveniency. The server settings
  now include the MIDI driver setup option (ALSA backend only).

- Application icon is now installed to ${prefix}/share/pixmaps;