@@ -8,4 +8,4 @@ configure:	 Makefile.in configure.ac
 clean:
 	@if [ -f Makefile ]; then make clean; fi || true
 	@rm -rvf Makefile configure config.*
-	@rm -rvf *.cache *.log *.status *.pro *.spec
+	@rm -rvf *.cache *.log *.status *.pro *.spec *.desktop
