@@ -23,16 +23,22 @@
 #define __qjackctlSystemTray_h
 
 #include <QWidget>
-#include <QPixmap>
-//Added by qt3to4:
-#include <QPaintEvent>
-#include <QMouseEvent>
+
+#if QT_VERSION >= 0x040200
+#include <QSystemTrayIcon>
+#else
+#include <QIcon>
+#endif
 
 
 //----------------------------------------------------------------------------
 // qjackctlSystemTray -- Custom system tray widget.
 
+#if QT_VERSION >= 0x040200
+class qjackctlSystemTray : public QSystemTrayIcon
+#else
 class qjackctlSystemTray : public QWidget
+#endif
 {
 	Q_OBJECT
 
@@ -52,7 +58,14 @@ public:
 	const QPixmap& pixmapOverlay() const;
 
 	// System tray icon/pixmaps update method.
-	void updateIcon();
+	void updatePixmap();
+
+#if QT_VERSION >= 0x040200
+
+	// Redirect to hide.
+	void close();
+
+#endif
 
 signals:
 
@@ -62,6 +75,15 @@ signals:
 	// Context menu signal.
 	void contextMenuRequested(const QPoint& pos);
 
+#if QT_VERSION >= 0x040200
+
+protected slots:
+
+	// Handle systeam tray activity.
+	void activated(QSystemTrayIcon::ActivationReason);
+
+#else
+
 protected:
 
 	// Self-drawable methods.
@@ -70,9 +92,14 @@ protected:
 	// Overriden mouse event method.
 	void mousePressEvent(QMouseEvent *);
 
+#endif
+
 private:
 
 	// Instance pixmap and background color.
+#if QT_VERSION >= 0x040200
+	QIcon   m_icon;
+#endif
 	QPixmap m_pixmap;
 	QPixmap m_pixmapOverlay;
 	QColor  m_background;
