@@ -1,6 +1,6 @@
 
 #define PACKAGE_NAME    "QjackCtl"
-#define PACKAGE_VERSION "0.3.0.7"
+#define PACKAGE_VERSION "0.3.0.8"
 
 #define CONFIG_PREFIX   "."
 #define CONFIG_DEBUG    1
@@ -11,9 +11,9 @@
 #define CONFIG_JACK_XRUN_DELAY
 #define CONFIG_JACK_MAX_DELAY
 
-#undef  CONFIG_SYSTEM_TRAY
 #undef  CONFIG_JACK_MIDI
 #undef  CONFIG_ALSA_SEQ
+#undef  CONFIG_SYSTEM_TRAY
 
 #undef  CONFIG_ROUND
 
